<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiCloud</string>
    
    <string name="action_add_account">Add account</string>
    <string name="action_authorize_account">Authorize</string>
    <string name="action_info_account">Information</string>
    <string name="action_remove_account">Remove</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="action_preferences">Preferences</string>    
    <string name="action_refresh">Refresh</string>
    <string name="action_upload">Upload</string>
    <string name="action_download">Download</string>
    <string name="action_new_folder">New folder</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_checksum">Checksum</string>
    <string name="action_properties">Properties</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_abort">Abort</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_parent">Parent</string>
    <string name="button_clear">Clear</string>
    <string name="button_folder">New folder</string>
    <string name="button_save">Save</string>
    <string name="desc_account">Account name</string>
    <string name="desc_add_account">Click to add account.</string>
    <string name="desc_checksum">Checksum:</string>
    <string name="desc_cloud">Cloud type</string>
    <string name="desc_created">Created:</string>
    <string name="desc_delete">Are you sure you want to delete the item?</string>
    <string name="desc_downloaded">File downloaded.</string>
    <string name="desc_empty_folder">Empty folder</string>
    <string name="desc_enter_file">File name</string>
    <string name="desc_enter_folder">Folder name</string>
    <string name="desc_file_id">ID:</string>
    <string name="desc_file_name">Name:</string>
    <string name="desc_file_size">Size:</string>
    <string name="desc_free_used_space">Free / Used:</string>
    <string name="desc_icon">Icon</string>
    <string name="desc_listed">listed</string>
    <string name="desc_modified">Modified:</string>
    <string name="desc_not_authorized">Not authorized.</string>
    <string name="desc_overwrite">Overwrite</string>
    <string name="desc_overwrite_msg">Do you want to overwrite existing file?</string>
    <string name="desc_quota_free">Free space:</string>
    <string name="desc_quota_total">Total space:</string>
    <string name="desc_quota_used">Used space:</string>
    <string name="desc_separator">separator</string>
    <string name="desc_synch_done">Synchronization finished.</string>
    <string name="desc_synch_failed">Failed to synchronize files:</string>
    <string name="desc_synch_root">[Synch root]</string>
    <string name="desc_synch_select">Select accounts to synchronize files to.</string>
    <string name="desc_synch_select_folder">Select synchronization folder first.</string>
    <string name="desc_target_name">Target name</string>
    <string name="desc_total_size">Total size:</string>
    <string name="desc_total_space">Total space:</string>
    <string name="desc_user_id">User ID:</string>
    <string name="desc_user_name">User name:</string>
    <string name="err_generic">Error</string>
    <string name="err_authorized">Account already authorized.</string>
    <string name="err_not_authorized">Account not authorized.</string>
    <string name="err_aborted">Loading aborted.</string>
    <string name="err_op_cancel">Operation cancelled.</string>
    <string name="err_folder">Cannot save as folder.</string>
    <string name="err_no_local_file">No local file selected.</string>
    <string name="err_no_local_name">No target file name entered.</string>
    <string name="err_no_name">No name entered.</string>
    <string name="err_no_overwrite">Overwriting not allowed.</string>
    <string name="err_synchronize">Conflicted files not synchronized.</string>
    <string name="prefs_display">Display options</string>
    <string name="prefs_show_deleted">Show deleted files</string>
    <string name="prefs_show_shared">Show shared files</string>
    <string name="prefs_hide_cache">Hide checksum cache</string>
    <string name="prefs_show_err">Show error dialogs</string>
    <string name="prefs_synchronize">Synchronization</string>
    <string name="prefs_synch_folder">Synchronization folder</string>
    <string name="prefs_synch_folder_desc">No folder selected.</string>
    <string name="prefs_synch_select">Selective synchronization</string>
    <string name="prefs_synch_select_none">None</string>
    <string name="prefs_download">Download options</string>
    <string name="prefs_threads">Threads</string>
    <string name="prefs_threads_desc">Number of download threads:</string>
    <string name="wait_authorize">Waiting for authorization&#8230;</string>
    <string name="wait_checksum">Computing checksum&#8230;</string>
    <string name="wait_delete">Deleting&#8230;</string>
    <string name="wait_download">Downloading&#8230;</string>
    <string name="wait_info">Getting account information&#8230;</string>
    <string name="wait_list">Loading folder content&#8230;</string>
    <string name="wait_load">Loading&#8230;</string>
    <string name="wait_new_folder">Creating new folder&#8230;</string>
    <string name="wait_synchronize">Synchronizing&#8230;</string>
    <string name="wait_synch_local">Analyzing local structure&#8230;</string>
    <string name="wait_synch_remote">Analyzing remote structure&#8230;</string>
    <string name="wait_rename">Renaming&#8230;</string>
    <string name="wait_upload">Uploading&#8230;</string>
    

</resources>
