<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/item_add_account" android:title="@string/action_add_account" android:orderInCategory="100" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_add_person"></item>
    <item android:id="@+id/item_new_folder" android:title="@string/action_new_folder" android:orderInCategory="200" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_new"></item>
    <item android:id="@+id/item_upload" android:title="@string/action_upload" android:orderInCategory="300" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_upload"></item>
    <item android:id="@+id/item_refresh" android:title="@string/action_refresh" android:orderInCategory="400" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_replay"></item>
    <item android:id="@+id/item_synchronize" android:title="@string/action_synchronize" android:orderInCategory="500" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_refresh"></item>
    <item android:id="@+id/item_preferences" android:title="@string/action_preferences" android:orderInCategory="600" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_settings"></item>
</menu>
