<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_folder"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_parent"
            style="?android:attr/buttonBarButtonStyle" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ellipsize="start"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/listView_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >

    </ListView>

</LinearLayout>
