<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/button_synch_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_synch_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_synch_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_parent"
            style="?android:attr/buttonBarButtonStyle" />
        
    </LinearLayout>

    <View
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@android:color/darker_gray"/>
    
    <LinearLayout
        android:id="@+id/list_clouds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>
    
    <View
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@android:color/darker_gray"/>
    
    <TextView
        android:id="@+id/textView_synch_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:ellipsize="start"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <View
	    android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView_synch_emtpy_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/desc_empty_folder"
        android:textStyle="bold" />
    
    <ListView
        android:id="@+id/listView_synch_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >

    </ListView>

</LinearLayout>
